Apply suggestions from code review
Co-authored-by: Kevin Zuniga Cuellar <46791833+kevinzunigacuellar@users.noreply.github.com>

--- a/src/content/docs/es/tutorial/0-introduction/1.mdx
+++ b/src/content/docs/es/tutorial/0-introduction/1.mdx
@@ -13,7 +13,7 @@ import Box from '~/components/tutorial/Box.astro';
 
 Si tienes alguna familiaridad básica con **HTML**, **Markdown**, **CSS** y un poco de **JavaScript**, ¡entonces estás totalmente preparado! Podrás completar todo el tutorial con sólo seguir las instrucciones. ¡Astro es para todos! 🧑‍🚀 👩‍🚀 👨‍🚀 
 
-También necesitarás una cuenta [GitHub](https://github.com) (o similar) para publicar tu proyecto en la web.
+También necesitarás una cuenta en [GitHub](https://github.com) (o similar) para publicar tu proyecto en la web.
 
 <details>
 <summary>¿Cómo se utilizan las listas de control al final de cada página?</summary>
@@ -22,7 +22,7 @@ Márcalos.
 
 Al final de cada página, encontrarás una lista de tareas que deberías poder realizar. Marca estos elementos para ver su progreso en el Tutorial Tracker.
 
-El uso del rastreador es opcional, pero puede ayudarle a recordar su lugar si completa el tutorial en varias visitas. También puedes dejar en blanco algunas listas de control como recordatorio de unidades que quieras volver a visitar más adelante.
+El uso del rastreador es opcional, pero puede ayudarle a recordar donde te quedaste si completas el tutorial en varias visitas. También puedes dejar en blanco algunas listas de control como recordatorio de unidades que quieras volver a visitar más adelante.
 
 (Estos datos sólo se guardan en el almacenamiento local de su navegador y no están disponibles en ningún otro lugar. Astro no envía ni almacena ningún dato.)
 </details>
