--- a/src/content/docs/es/tutorial/0-introduction/index.mdx
+++ b/src/content/docs/es/tutorial/0-introduction/index.mdx
@@ -13,12 +13,12 @@ import Box from '~/components/tutorial/Box.astro';
 import Lede from '~/components/tutorial/Lede.astro';
 
 
-<Lede> En este tutorial, aprenderás las principales funciones de Astro creando un blog totalmente funcional, desde cero hasta el lanzamiento completo. 🚀 </Lede>
+<Lede> En este tutorial, aprenderás los conceptos fundamentales de Astro creando un blog totalmente funcional, desde cero hasta el lanzamiento completo. 🚀 </Lede>
 
 A lo largo del camino, tú: 
 - Configurarás tu entorno de desarrollo 
 - Crearás páginas y entradas de blog para tu sitio web
-- Construirás con componentes Astro
+- Construirás componentes Astro
 - Consultarás y trabajarás con archivos locales
 - Añadirás interactividad a tu sitio web 
 - Desplegarás tu sitio en la web
