--- a/src/content/docs/es/tutorial/1-setup/1.mdx
+++ b/src/content/docs/es/tutorial/1-setup/1.mdx
@@ -19,7 +19,7 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
   - Instala cualquier herramienta que vayas a utilizar para crear tu sitio web Astro.
 </PreCheck>
 
-## Obtenga las herramientas de desarrollo que necesita
+## Obtenga las herramientas de desarrollo que necesites
 
 ### Terminal
 
@@ -66,7 +66,7 @@ Este tutorial utilizará **VS Code**, pero puedes utilizar cualquier editor para
 
     <MultipleChoice>
       <Option>
-        navegador web
+        Navegador web
       </Option>
       <Option>
         Terminal
@@ -76,7 +76,7 @@ Este tutorial utilizará **VS Code**, pero puedes utilizar cualquier editor para
       </Option>
     </MultipleChoice>
 
-2. ¿Un proveedor de control de versiones en línea para tu repositorio?
+2. ¿Un gestor de control de versiones en línea para tu repositorio?
 
     <MultipleChoice>
       <Option isCorrect>
@@ -99,7 +99,7 @@ Este tutorial utilizará **VS Code**, pero puedes utilizar cualquier editor para
         Terminal
       </Option>
       <Option>
-        navegador web
+        Navegador web
       </Option>
     </MultipleChoice>
 
