--- a/src/content/docs/es/tutorial/1-setup/2.mdx
+++ b/src/content/docs/es/tutorial/1-setup/2.mdx
@@ -49,20 +49,19 @@ La forma preferida de crear un nuevo sitio Astro es a través de nuestro asisten
     </PackageManagerTabs>
 
 2. Confirma `y` para instalar `create-astro`.
-3. Cuando el prompt te pregunte "¿Dónde desea crear su nuevo proyecto?", escribe el nombre de una carpeta para crear un nuevo directorio para su proyecto, por ejemplo
-`./tutorial`
+3. Cuando el prompt te pregunte "Where would you like to create your new project?", escribe el nombre de una carpeta para crear un nuevo directorio para su proyecto, por ejemplo `./tutorial`
 
     :::note
-    Un nuevo proyecto Astro sólo puede crearse en una carpeta completamente vacía, así que elige un nombre para tu carpeta que no exista ya.
+    Un nuevo proyecto Astro sólo puede crearse en una carpeta completamente vacía, así que elige un nombre para tu carpeta que no exista.
     :::
 
 4. Verás una pequeña lista de plantillas de inicio entre las que puedes elegir. Utiliza las teclas de flecha (arriba y abajo) para navegar hasta la plantilla "Vacío" y, a continuación, pulsa return (Enter) para enviar tu elección. 
 
-5. Cuando aparezca la pregunta "¿Desea instalar las dependencias?", escribe `y`.
+5. Cuando aparezca la pregunta "Would you like to install dependencies?", escribe `y`.
 
 6. Cuando el prompt te pregunte si planeas escribir TypeScript, teclea `n`. 
 
-7. Cuando el prompt te pregunte: "¿Desea inicializar un nuevo repositorio git?", escriba `y`.
+7. Cuando el prompt te pregunte: "Would you like to initialize a new git repository?", escriba `y`.
 
 Cuando finalice el asistente de instalación, ya no necesitarás esta terminal. Ahora puede abrir VS Code para continuar.
 
@@ -118,7 +117,7 @@ Para poder previsualizar los archivos de tu proyecto _como un sitio web_ mientra
 
 Tus archivos de proyecto contienen todo el código necesario para mostrar un sitio web Astro, pero el navegador es el responsable de mostrar tu código como páginas web.
 
-1. Haz clic en el enlace `localhost` de tu ventana de terminal para ver una vista previa en directo de tu nuevo sitio web Astro. 
+1. Haz clic en el enlace `localhost` en la terminal para ver una vista previa en directo de tu nuevo sitio web Astro. 
 
     (Astro utiliza `http://localhost:3000` por defecto si el puerto 3000 está disponible).
 
@@ -128,7 +127,7 @@ Tus archivos de proyecto contienen todo el código necesario para mostrar un sit
 
 :::tip[Usando el servidor de desarrollo Astro]
 
-Mientras el servidor Astro esté funcionando en modo de desarrollo, NO podrás ejecutar comandos en tu ventana de terminal. En su lugar, este panel te dará retroalimentación mientras previsualiza su sitio.
+Mientras el servidor Astro esté funcionando en modo de desarrollo, NO podrás ejecutar comandos en esa terminal. En su lugar, este panel te dará retroalimentación mientras previsualiza su sitio.
 
 Puedes detener el servidor de desarrollo en cualquier momento y volver al símbolo del sistema escribiendo <kbd>Ctrl + C</kbd> en el terminal.
 
