--- a/src/content/docs/es/tutorial/1-setup/3.mdx
+++ b/src/content/docs/es/tutorial/1-setup/3.mdx
@@ -21,7 +21,7 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 ## Edita tu página de inicio
 
-1. En tu editor de código, navega en el panel de archivos del Explorador hasta `src/pages/index.astro` y haz clic en él para abrir el contenido del archivo en una pestaña editable.
+1. En tu editor de código, navega en el panel de archivos del Explorador hasta `src/pages/index.astro` y abre el contenido del archivo en una pestaña editable.
 
     El contenido de tu archivo `index.astro` debe tener este aspecto:
 
