--- a/src/content/docs/es/tutorial/1-setup/4.mdx
+++ b/src/content/docs/es/tutorial/1-setup/4.mdx
@@ -17,7 +17,7 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
   - Pon en línea tu repositorio de proyectos
 </PreCheck>
 
-Este tutorial utilizará GitHub para almacenar nuestro repositorio y conectarse a un host web. Te invitamos a utilizar el proveedor de git en línea de su elección.
+Este tutorial utilizará GitHub para almacenar nuestro repositorio y conectarse a un host web. Te invitamos a utilizar el proveedor de git en línea de tu elección.
 
 :::note
 Si ya estás familiarizado con git y tienes tu propio flujo de trabajo, crea un nuevo repositorio de GitHub para tu proyecto utilizando el método que prefieras. Pasa a la página siguiente: ["Despliegue de su sitio en la Web"](/es/tutorial/1-setup/5/).
@@ -25,7 +25,7 @@ Si ya estás familiarizado con git y tienes tu propio flujo de trabajo, crea un 
 
 ## Crea un repositorio en GitHub
 
-Aunque hay algunas maneras de obtener su código local almacenado en GitHub, este tutorial te guiará a través de un método que no requiere el uso de git en la línea de comandos. 
+Aunque hay algunas maneras de obtener tu código local almacenado en GitHub, este tutorial te guiará a través de un método que no requiere el uso de git en la línea de comandos. 
 
 1. Accede a GitHub.com en un navegador y haz clic en el <kbd>+</kbd> de la parte superior derecha de la pantalla para crear un nuevo repositorio. 
 
@@ -38,7 +38,7 @@ Aunque hay algunas maneras de obtener su código local almacenado en GitHub, est
 
 ## Compila tu código local en GitHub
 
-En la última sección, tu hiciste un cambio en el contenido de su página. Esto significa que los archivos de tu proyecto han cambiado y VS Code debería mostrar un número encima del icono del menú "Fuente". Esta pestaña de fuente es a donde irás regularmente para actualizar tus archivos en GitHub.
+En la última sección, hiciste un cambio en el contenido de tu página. Esto significa que los archivos de tu proyecto han cambiado y VS Code debería mostrar un número encima del icono del menú "Fuente". Esta pestaña de fuente es a donde irás regularmente para actualizar tus archivos en GitHub.
 
 
 1. Haz clic en la pestaña Control de código fuente en su VS Code para ver una lista de los archivos que han cambiado. Si aparece un mensaje indicando que necesita instalar `git`, sigue las instrucciones que se proporcionan y, a continuación, vuelve a cargar VS Code.
