--- a/src/content/docs/es/tutorial/1-setup/index.mdx
+++ b/src/content/docs/es/tutorial/1-setup/index.mdx
@@ -56,7 +56,7 @@ Si quieres desplegar tu sitio en Netlify, pasa a [Despliega tu sitio en la web](
 
 En esta unidad, **crearás un nuevo proyecto** que estará **almacenado online en GitHub** y **conectado a Netlify**. 
 
-A medida que escribas código, enviarás periódicamente tus cambios a GitHub. Netlify utilizará los archivos de tu repositorio de GitHub para construir tu sitio web, y luego lo publicará en Internet en una dirección única donde cualquiera pueda verlo.
+A medida que escribas código, enviarás periódicamente tus cambios a GitHub. Netlify utilizará los archivos de tu repositorio de GitHub para construir tu sitio web, y luego lo publicará en Internet en una dirección única donde cualquiera podrá verlo.
 
 Cada vez que envíes un cambio a GitHub, se enviará una notificación a Netlify. Entonces, Netlify automáticamente reconstruirá y volverá a publicar tu sitio en vivo para reflejar esos cambios.
 
