docs: update assets related pages for new configuration shape

--- a/src/content/docs/en/guides/assets.mdx
+++ b/src/content/docs/en/guides/assets.mdx
@@ -356,13 +356,14 @@ Then, enable Astro's sharp image service in your config:
 
 ```js title="astro.config.mjs"
 import { defineConfig } from "astro/config";
+import { getSharpImageService } from "astro/assets";
 
 export default defineConfig({
 	experimental: {
 		assets: true,
 	},
 	image: {
-		service: "astro/assets/services/sharp",
+		service: getSharpImageService(),
 	},
 });
 ```
