Update `astro.build/asset` links to live assets in repo (#3016)
* Fix broken asset links

- Replace broken `https://astro.build/assets` links with new working links
- Update alt texts

* Switch to assets hosted in docs

- Add `/public/assets` folder
- Add all logo assets and rays / arc wallpaper to `/public/assets`
- Update links to use `docs.astro.build`

* Fix image format

- Switch .webp to .png

* Fix folder name, switch back to webp

- Rename folder to `assets`
- Switch back to `webp` for arc and rays wallpapers

* Fix image file names

- Fix image names to fit pathnames

---------

Co-authored-by: BryceRussell <19967622+BryceRussell@users.noreply.github.com>
Co-authored-by: Sarah Rainsberger <sarah@rainsberger.ca>

--- a/src/content/docs/en/guides/assets.mdx
+++ b/src/content/docs/en/guides/assets.mdx
@@ -97,8 +97,8 @@ Your existing images in `public/` and remote images are still valid but are not 
 <img src="/images/stars.png" alt="A starry night sky.">
 
 <!-- Remote image on another server -->
-![Astro logo](https://astro.build/assets/logo.png)
-<img src="https://astro.build/assets/logo.png" width="25" alt="Astro logo">
+![Astro logo](https://docs.astro.build/assets/logomark-light.png)
+<img src="https://docs.astro.build/assets/logomark-light.png" width="25" alt="Astro logo">
 ```
 
 ### Convert from `@astrojs/image`
