--- a/src/content/docs/es/guides/client-side-scripts.mdx
+++ b/src/content/docs/es/guides/client-side-scripts.mdx
@@ -57,7 +57,7 @@ De forma predeterminada, las etiquetas `<script>` son procesadas por Astro.
 </script>
 ```
 
-Para evitar el empaquetado del script, puedes utilizar la directiva `is:line`.
+Para evitar el empaquetado del script, puedes utilizar la directiva `is:inline`.
 
 ```astro title="src/components/InlineScript.astro" "is:inline"
 <script is:inline>
@@ -68,7 +68,7 @@ Para evitar el empaquetado del script, puedes utilizar la directiva `is:line`.
 ```
 
 :::note
-Agregar `type=module` o cualquier otro atributo que no sea `src` a la etiqueta `<script>` desactivará el empaquetado predeterminado de Astro, tratando la etiqueta como si tuviera una directiva `is:line`.
+Agregar `type=module` o cualquier otro atributo que no sea `src` a la etiqueta `<script>` desactivará el empaquetado predeterminado de Astro, tratando la etiqueta como si tuviera una directiva `is:inline`.
 :::
 
 📚 Consulta nuestra página de [referencia de directivas](/es/reference/directives-reference/#directivas-script--style) para obtener más información sobre las directivas disponibles en las etiquetas `<script>`.
@@ -95,7 +95,7 @@ Astro empaquetará, optimizará y agregará estos scripts a la página por ti, s
 
 **Cuando usar esto:** Si tu archivo JavaScript se encuentra dentro de `public/` o en un CDN.
 
-Para cargar scripts fuera del directorio `src/` de tu proyecto, incluye la directiva `is:line`. Este enfoque omite el procesamiento, agrupación y optimización de JavaScript que proporciona Astro cuando importa scripts como se describe anteriormente.
+Para cargar scripts fuera del directorio `src/` de tu proyecto, incluye la directiva `is:inline`. Este enfoque omite el procesamiento, agrupación y optimización de JavaScript que proporciona Astro cuando importa scripts como se describe anteriormente.
 
 ```astro title="src/components/ExternalScripts.astro" "is:inline"
 <!-- ruta absoluta a un script en `public/my-script.js` -->
