--- a/src/content/docs/en/guides/baas/google-firebase.mdx
+++ b/src/content/docs/en/guides/baas/google-firebase.mdx
@@ -6,8 +6,4 @@ service: Firebase
 stub: true
 ---
 
-[Firebase](https://firebase.google.com/) is an app development platform that helps you build and grow apps and games users love. Backed by Google and trusted by millions of businesses around the world.
-
-## Hosting Resources
-
-- Check out [Deploy your Astro Site to Google’s Firebase Hosting](/en/guides/deploy/google-firebase/)
+[Firebase](https://firebase.google.com/) is an app development platform that provides a NoSQL database, authentication, realtime subscriptions, functions, and storage.
