--- a/src/content/docs/en/guides/baas/supabase.mdx
+++ b/src/content/docs/en/guides/baas/supabase.mdx
@@ -1,13 +1,12 @@
 ---
 title: Supabase & Astro
-description: Add authentication, storage, and realtime data to your Astro application.
+description: Add a backend to your Astro project with Supabase
 type: baas
 service: Supabase
 stub: true
 ---
 
-[Supabase](https://supabase.com/) is an open source Firebase alternative. Start your project with a Postgres database, Authentication, instant APIs, Edge Functions, Realtime subscriptions, and Storage.
+[Supabase](https://supabase.com/) is an open source Firebase alternative. It provides a Postgres database, authentication, edge functions, realtime subscriptions, and storage.
 
-## Resources
-
-- Check out [Getting Started](https://supabase.com/docs/guides/getting-started)
+## Community Resources
+- [Getting into the holiday spirit with Astro, React, and Supabase](https://www.aleksandra.codes/astro-supabase)
