revised baas homepage

--- a/src/content/docs/en/guides/baas.mdx
+++ b/src/content/docs/en/guides/baas.mdx
@@ -15,24 +15,16 @@ import BackendAsAServiceGuidesNav from '~/components/BackendAsAServiceGuidesNav.
 
 Note that many of these pages are **stubs**: they're collections of resources waiting for your contribution!
 
-## What is a Backend as a Service
+## What is a backend as a service?
 
-Backend as a Service (BaaS) is a cloud-based service that provides developers with a way to build and manage the backend infrastructure of their applications. It provides a set of tools and services for managing databases, user authentication, and other server-side functions. This enables developers to focus on building their applications without having to worry about managing the underlying infrastructure.
+A backend as a service is a cloud-based system that helps you build and manage your backend infrastructure. It provides a set of tools and services for managing databases, user authentication, and other server-side functionality. This enables you to focus on build your applications without having to worry about managing the underlying infrastructure.
 
-BaaS can be seen as a way to abstract away the complexities of building and managing a backend system, making it easier for developers to build and scale their applications. With BaaS, developers can quickly spin up a backend for their application and start building their frontend, without having to worry about setting up and managing servers, databases, and other components of the backend. This saves time, reduces development costs, and makes it easier to launch new applications.
+## Why would I use a backend as a service?
 
-## Why would I use a Backend as a Service
-
-Using a Backend as a Service (BaaS) in a JavaScript framework like Astro can bring several benefits, such as:
-
-Reduced Development Time: BaaS provides pre-built backend components such as databases, authentication, and storage. This can save time compared to building and configuring these components from scratch.
-
-Scalability: BaaS providers typically offer scalable infrastructure.  As your application grows, you can easily scale up the backend to handle increased traffic and data storage needs.
-
-Cost Savings: BaaS eliminates the need to purchase and manage hardware and infrastructure, and often includes cost-saving features such as auto-scaling.
-
-Increased Focus on Application Development: By outsourcing backend management to a BaaS provider, developers can focus on building and improving frontend and user experience.
-
-Simplified Maintenance: BaaS providers typically handle maintenance, security, and updates for the backend components. This frees up developers to focus on adding new features or improving existing ones.
-
-In summary, using BaaS in a JavaScript framework like Astro can help you develop and launch faster, more cost-effectively, and with less maintenance overhead.
+If your project has complex server-side needs, like:
+- user signups and authentication
+- persistant data storage
+- user-uploaded asset storage
+- API generation
+- realtime communication
+You might want to consider a backend as a service.
