--- a/src/content/docs/en/guides/baas/google-firebase.mdx
+++ b/src/content/docs/en/guides/baas/google-firebase.mdx
@@ -1,6 +1,6 @@
 ---
 title: Firebase & Astro
-description: Add authentication, storage, and realtime data to your Astro application. Extend those capabilities with the full Google Cloud Platform
+description: Add a backend to your project with Supabase
 type: baas
 service: Firebase
 stub: true
