--- a/src/content/docs/en/guides/baas/supabase.mdx
+++ b/src/content/docs/en/guides/baas/supabase.mdx
@@ -1,6 +1,6 @@
 ---
 title: Supabase & Astro
-description: Add a backend to your Astro project with Supabase
+description: Add a backend to your project with Supabase
 type: baas
 service: Supabase
 stub: true
