--- a/src/content/docs/en/guides/cms/decap-cms.mdx
+++ b/src/content/docs/en/guides/cms/decap-cms.mdx
@@ -10,7 +10,7 @@ i18nReady: false
 [Decap CMS](https://www.decapcms.org/) (formerly Netlify CMS) is an open-source, Git-based content management system.
 ## Community Resources 
 
-- Use the [`astro-decap-cms`](https://github.com/delucis/astro-netlify-cms) Astro integration to add Decap CMS to your project.
+- Use the [`astro-netlify-cms`](https://github.com/delucis/astro-netlify-cms) Astro integration to add Netlify CMS to your project.
 
 - You can get started with the [Astro Blog Starter with Netlify CMS](https://github.com/delucis/astro-netlify-cms-starter).
 
