--- a/src/content/docs/en/guides/cms/decap-cms.mdx
+++ b/src/content/docs/en/guides/cms/decap-cms.mdx
@@ -20,7 +20,7 @@ i18nReady: false
 
 ## Production Sites
 
-The following sites use Astro + Decap CMS in production:
+The following sites use Astro + Netlify CMS in production:
 
 - [yunielacosta.com](https://www.yunielacosta.com/) by Yuniel Acosta — [source code on GitHub](https://github.com/yacosta738/yacosta738.github.io)
 
