update page desc

--- a/src/content/docs/es/guides/migrate-to-astro/from-hugo.mdx
+++ b/src/content/docs/es/guides/migrate-to-astro/from-hugo.mdx
@@ -1,6 +1,6 @@
 ---
 title: Migrando desde Hugo
-description: Consejos para migrar un proyecto de Hugo existente a Astro
+description: Consejos para migrar un proyecto existente de Hugo a Astro
 type: migration
 stub: true
 framework: Hugo
