Fix some punctuation and intonation problems

--- a/src/content/docs/zh-cn/guides/integrations-guide/react.mdx
+++ b/src/content/docs/zh-cn/guides/integrations-guide/react.mdx
@@ -11,7 +11,7 @@ i18nReady: true
 import Video from '~/components/Video.astro';
 
 
-这个 **[Astro 集成][astro-integration]** 为你的 [React](https://react.dev/) 组件实现服务器端渲染和客户端水合.
+这个 **[Astro 集成][astro-integration]** 为你的 [React](https://react.dev/) 组件实现服务器端渲染和客户端水合。
 
 ## 安装
 
@@ -19,9 +19,9 @@ import Video from '~/components/Video.astro';
 
 ### `astro add` 命令
 
-Astro包括一个 CLI 工具用于添加第一方的集成： `astro add` ，这个命令有以下功能：
+Astro 包括一个 CLI 工具用于添加第一方的集成： `astro add` ，这个命令有以下功能：
 
-1.  (可选) 安装所有必要的依赖和同行依赖
+1. （可选）安装所有必要的依赖和同行依赖
 2. （也是可选）更新你的`astro.config.*`文件，以启用这个集成。
 
 要安装 `@astrojs/react`，请在你的项目目录下运行以下命令并根据提示操作：
@@ -45,7 +45,7 @@ pnpm astro add react
 npm install @astrojs/react
 ```
 
-大多数软件包管理器也会安装相关的同行依赖. 尽管如此，如果你在启动Astro时看到"Cannot find package 'react'" (或类似的) 警告，你需要安装 `react` 和 `react-dom`：
+大多数软件包管理器也会安装相关的同行依赖。尽管如此，如果你在启动Astro时看到"Cannot find package 'react'" (或类似的) 警告，你需要安装 `react` 和 `react-dom`：
 
 ```sh
 npm install react react-dom
