--- a/src/content/docs/en/core-concepts/endpoints.mdx
+++ b/src/content/docs/en/core-concepts/endpoints.mdx
@@ -173,7 +173,7 @@ export const all: APIRoute = ({ request }) => {
 }
 ```
 
-<RecipeLinks slugs={["/en/recipes/captcha/", "/en/recipes/build-forms-api/" ]}/>
+<RecipeLinks slugs={["en/recipes/captcha", "en/recipes/build-forms-api" ]}/>
 
 ### `request` 
 In SSR mode, the `request` property returns a fully usable [`Request`](https://developer.mozilla.org/en-US/docs/Web/API/Request) object that refers to the current request. This allows you to accept data and check headers:
