--- a/src/content/docs/en/guides/content.mdx
+++ b/src/content/docs/en/guides/content.mdx
@@ -50,7 +50,7 @@ If you're writing your content in a CMS, you can fetch your posts and use [dynam
 
 To build common features to organize and display your content, such as a blog archive or a page for each blog tag, Astro allows you to [fetch filenames and metadata](/en/reference/api-reference/#astroglob) from your Markdown and MDX frontmatter and use these to generate page content and routes.
 
-<RecipeLinks slugs={["/en/guides/rss/"]}/>
+<RecipeLinks slugs={["en/guides/rss"]} />
 
 ## Community Integrations
 
