make rss a recipe again

--- a/src/content/docs/en/guides/rss.mdx
+++ b/src/content/docs/en/guides/rss.mdx
@@ -2,6 +2,7 @@
 title: Add an RSS feed
 description: Let users subscribe to your content by adding an RSS feed to your Astro site.
 i18nReady: true
+recipe: true
 ---
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 import Since from '~/components/Since.astro'
