Add RecipeLink component and link to recipes (#3005)
Co-authored-by: Reuben Tier <64310361+TheOtterlord@users.noreply.github.com>
Co-authored-by: Sarah Rainsberger <sarah@rainsberger.ca>
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/src/content/docs/en/core-concepts/endpoints.mdx
+++ b/src/content/docs/en/core-concepts/endpoints.mdx
@@ -3,6 +3,8 @@ title: Endpoints
 description: Learn how to create endpoints that serve any kind of data
 i18nReady: true
 ---
+import RecipeLinks from "~/components/RecipeLinks.astro";
+
 Astro lets you create custom endpoints to serve any kind of data. You can use this to generate images, expose an RSS document, or use them as API Routes to build a full API for your site.
 
 In statically-generated sites, your custom endpoints are called at build time to produce static files. If you opt in to [SSR](/en/guides/server-side-rendering/) mode, custom endpoints turn into live server endpoints that are called on request. Static and SSR endpoints are defined similarly, but SSR endpoints support additional features.
@@ -171,6 +173,8 @@ export const all: APIRoute = ({ request }) => {
 }
 ```
 
+<RecipeLinks slugs={["en/recipes/captcha", "en/recipes/build-forms-api" ]}/>
+
 ### `request` 
 In SSR mode, the `request` property returns a fully usable [`Request`](https://developer.mozilla.org/en-US/docs/Web/API/Request) object that refers to the current request. This allows you to accept data and check headers:
 
@@ -210,4 +214,3 @@ export async function get({ params, redirect }) {
 }
 ```
 
-**Related recipe:** [Use server endpoints to verify a CAPTCHA](/en/recipes/captcha/)
