--- a/src/content/docs/en/guides/imports.mdx
+++ b/src/content/docs/en/guides/imports.mdx
@@ -3,6 +3,7 @@ title: Imports
 description: Learn how to import different content types with Astro.
 i18nReady: true
 ---
+import RecipeLinks from "~/components/RecipeLinks.astro";
 
 Astro supports most static assets with zero configuration required. You can use the `import` statement anywhere in your project JavaScript (including your Astro frontmatter) and Astro will include a built, optimized copy of that static asset in your final build. `@import` is also supported inside of CSS & `<style>` tags.
 
@@ -236,4 +237,4 @@ With **Vite** and compatible **Rollup** plugins, you can import file types which
 Refer to your plugin's documentation for configuration options, and how to correctly install it.
 :::
 
-**Related recipe:** [Add support for importing YAML data](/en/recipes/add-yaml-support/).
+<RecipeLinks slugs={["en/recipes/add-yaml-support"]} />
