reorganize content for happy path
Co-authored-by: Antonio <bandantonio@users.noreply.github.com>

--- a/src/content/docs/en/guides/troubleshooting.mdx
+++ b/src/content/docs/en/guides/troubleshooting.mdx
@@ -132,22 +132,26 @@ Yarn 2+, a.k.a. Berry, uses a technique called [Plug'n'Play (PnP)](https://yarnp
 nodeLinker: "node-modules"
 ```
 
-### Using Astro with dependencies in the root of a Monorepo
+### Using Astro in a monorepo
 
-When installing dependencies in a Monorepo, it is possible to also install dependencies in the root `package.json` file instead of the project `package.json`: installing dependencies this way can make some Astro packages to not work or bundle as expected.
-It is recommended to just put all of Astro packages in the project `package.json`to avoid this kind of issue; if it can't be avoided you will probably need to manually put the dependencies in the `vite.ssr.noExternal` part of Astro's config:
+When working with Astro in a monorepo setup, it is recommended to keep all the dependencies in the project `package.json` file.
+However, you may also want to use Astro in the root of the monorepo (for example, to generate static routes properly). In this case, you may encounter some issues with dependencies not being installed and bundled properly.
+To avoid this, you need to manually add these dependencies to the `vite.ssr.noExternal` part of Astro's config:
+
 ```js
 // astro.config.mjs
 import { defineConfig } from 'astro/config'
-
 export default defineConfig({
   vite: {
     ssr: {
-      noExternal: ['@astrojs/package-a', '@astrojs/package-b', ..., '@astrojs/package-N']
+      noExternal: [
+        '@astrojs/package-a',
+        '@astrojs/package-b',
+        '@astrojs/package-n',
+      ]
+    }
+  }
 })
-```
-
-
 ### Using `<head>` in a component
 
 In Astro, using a `<head>` tag works like any other HTML tag: it does not get moved to the top of the page or merged with the existing `<head>`. Because of this, you usually only want to include one `<head>` tag throughout a page. We recommend writing that single `<head>` and its contents in a [layout component](/en/core-concepts/layouts/).
