--- a/src/content/docs/en/guides/troubleshooting.mdx
+++ b/src/content/docs/en/guides/troubleshooting.mdx
@@ -134,9 +134,9 @@ nodeLinker: "node-modules"
 
 ### Using Astro in a monorepo
 
-When working with Astro in a monorepo setup, it is recommended to keep all the dependencies in the project `package.json` file.
-However, you may also want to use Astro in the root of the monorepo (for example, to generate static routes properly). In this case, you may encounter some issues with dependencies not being installed and bundled properly.
-To avoid this, you need to manually add these dependencies to the `vite.ssr.noExternal` part of Astro's config:
+When working with Astro in a monorepo setup, project dependencies should be added in each project's own `package.json` file.
+
+However, you may also want to use Astro in the root of the monorepo (e.g. Nx projects recommend installing dependencies at the root). In this case, manually add Astro-related dependencies (e.g. `@astrojs/vue`, `astro-component-lib`) to the `vite.ssr.noExternal` part of Astro's config to ensure that these dependencies are properly installed and bundled:
 
 ```js
 // astro.config.mjs
