reintroducing dependencies in the heading

--- a/src/content/docs/en/guides/troubleshooting.mdx
+++ b/src/content/docs/en/guides/troubleshooting.mdx
@@ -132,7 +132,7 @@ Yarn 2+, a.k.a. Berry, uses a technique called [Plug'n'Play (PnP)](https://yarnp
 nodeLinker: "node-modules"
 ```
 
-### Using Astro in a monorepo
+### Adding dependencies to Astro in a monorepo
 
 When working with Astro in a monorepo setup, project dependencies should be added in each project's own `package.json` file.
 
