Fix punctuation problems

--- a/src/content/docs/zh-cn/guides/integrations-guide/react.mdx
+++ b/src/content/docs/zh-cn/guides/integrations-guide/react.mdx
@@ -11,7 +11,7 @@ i18nReady: true
 import Video from '~/components/Video.astro';
 
 
-这个 **[Astro 集成][astro-integration]** 为你的 [React](https://react.dev/) 组件实现服务器端渲染和客户端水合。
+**[Astro 集成][astro-integration]** 为你的 [React](https://react.dev/) 组件实现服务器端渲染和客户端水合。
 
 ## 安装
 
@@ -35,7 +35,7 @@ yarn astro add react
 pnpm astro add react
 ```
 
-如果你遇到任何问题, [请随时在 GitHub 上向我们报告](https://github.com/withastro/astro/issues)并尝试下面的手动安装步骤。
+如果你遇到任何问题，[请随时在 GitHub 上向我们报告](https://github.com/withastro/astro/issues)并尝试下面的手动安装步骤。
 
 ### 手动安装依赖
 
@@ -45,7 +45,7 @@ pnpm astro add react
 npm install @astrojs/react
 ```
 
-大多数软件包管理器也会安装相关的同行依赖。尽管如此，如果你在启动Astro时看到"Cannot find package 'react'" (或类似的) 警告，你需要安装 `react` 和 `react-dom`：
+大多数软件包管理器也会安装相关的同行依赖。尽管如此，如果你在启动Astro时看到"Cannot find package 'react'"（或类似的）警告，你需要安装 `react` 和 `react-dom`：
 
 ```sh
 npm install react react-dom
@@ -85,4 +85,4 @@ export default defineConfig({
 
 [astro-integration]: /zh-cn/guides/integrations-guide/
 
-[astro-ui-frameworks]: /zh-cn/core-concepts/framework-components/#using-framework-components
+[astro-ui-frameworks]: /zh-cn/core-concepts/framework-components/#使用框架组件
