--- a/src/content/docs/es/guides/migrate-to-astro/from-hugo.mdx
+++ b/src/content/docs/es/guides/migrate-to-astro/from-hugo.mdx
@@ -15,9 +15,9 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 Hugo y Astro comparten algunas similitudes que te ayudarán a migrar tu proyecto:
 
-- Hugo y Astro son generadores modernos de sitios estáticos, idealmente adaptados para [sitios web enfocados en contenido](/en/concepts/why-astro/#content-focused), como los blogs.
+- Hugo y Astro son generadores modernos de sitios estáticos, idealmente adaptados para [sitios web enfocados en contenido](/es/concepts/why-astro/#enfocado-en-el-contenido), como los blogs.
 
-- Hugo y Astro permiten [crear tu contenido en Markdown](/en/guides/content/#markdown-authoring). Sin embargo, Hugo incluye varias propiedades especiales en el frontmatter y permite escribir este en YAML, TOML o JSON. Aunque muchas de las propiedades existentes de tu frontmatter de Hugo no serán "especiales" en Astro, puedes seguir utilizando tus archivos Markdown existentes y los valores del frontmatter en YAML.
+- Hugo y Astro permiten [crear tu contenido en Markdown](/es/guides/content/#creación-de-markdown). Sin embargo, Hugo incluye varias propiedades especiales en el frontmatter y permite escribir este en YAML, TOML o JSON. Aunque muchas de las propiedades existentes de tu frontmatter de Hugo no serán "especiales" en Astro, puedes seguir utilizando tus archivos Markdown existentes y los valores del frontmatter en YAML.
 
 - Hugo y Astro permiten mejorar tu sitio con una variedad de [integraciones y paquetes externos](https://astro.build/integrations/).
 
@@ -27,11 +27,11 @@ Hugo y Astro comparten algunas similitudes que te ayudarán a migrar tu proyecto
 
 Cuando reconstruyas tu sitio de Hugo a Astro, notarás algunas diferencias importantes:
 
-- Hugo utiliza Go Templating para la generación de páginas. [La sintaxis de Astro](/en/core-concepts/astro-components/) es un superset de HTML similar a JSX.
+- Hugo utiliza Go Templating para la generación de páginas. [La sintaxis de Astro](/es/core-concepts/astro-components/) es un superset de HTML similar a JSX.
 
-- Astro no utiliza shortcodes para insertar contenido dinamico en archivos Markdown estándar, pero [La integración de MDX en Astro](/en/guides/integrations-guide/mdx/) te permite usar JSX e importar componentes en archivos MDX.
+- Astro no utiliza shortcodes para insertar contenido dinámico en archivos Markdown estándar, pero [la integración de MDX en Astro](/es/guides/integrations-guide/mdx/) te permite usar JSX e importar componentes en archivos MDX.
 
-- Mientras que en Hugo se pueden usar "parciales" para elementos reutilizables del diseño, [Astro está completamente basado en componentes](/en/core-concepts/astro-components/). Cualquier archivo `.astro` puede ser un componente, diseño o una página completa, y puede importar y renderizar cualquier otro componente de Astro. Los componentes de Astro también pueden incluir [otros componentes de frameworks de UI (p. ej. React, Svelte, Vue, Solid)](/en/core-concepts/framework-components/) así como contenido o metadatos de [otros archivos en tu proyecto](/en/guides/imports/), como Markdown o MDX.
+- Mientras que en Hugo se pueden usar "parciales" para elementos reutilizables del diseño, [Astro está completamente basado en componentes](/es/core-concepts/astro-components/). Cualquier archivo `.astro` puede ser un componente, diseño o una página completa, y puede importar y renderizar cualquier otro componente de Astro. Los componentes de Astro también pueden incluir [otros componentes de frameworks de UI (p. ej. React, Svelte, Vue, Solid)](/es/core-concepts/framework-components/) así como contenido o metadatos de [otros archivos en tu proyecto](/es/guides/imports/), como Markdown o MDX.
 
 ## Migrar de Hugo a Astro
 
@@ -57,11 +57,11 @@ Puedes pasar el argumento `--template` al comando `create astro` para empezar un
     </Fragment>
   </PackageManagerTabs>
 
-Lleva tus archivos Markdown (o MDX, con nuestra integración opcional) existentes como contenido para [crear páginas en Markdown o MDX](/en/guides/markdown-content/). Es posible que necesites convertir tu frontmatter a YAML, ya que Astro solo permite YAML frontmatter en estos archivos.
+Lleva tus archivos Markdown (o MDX, con nuestra integración opcional) existentes como contenido para [crear páginas en Markdown o MDX](/es/guides/markdown-content/). Es posible que necesites convertir tu frontmatter a YAML, ya que Astro solo permite YAML frontmatter en estos archivos.
 
-Para seguir utilizando contenido dinámico como variables, expresiones o componentes de la UI dentro del contenido de tu Markdown, añade la integración opcional MDX de Astro y convierte tus archivos Markdown existentes a [páginas MDX](/en/guides/markdown-content/). MDX soporta el frontmatter en YAML, para que puedas mantener las propiedades existentes de tu frontmatter. Pero, tienes que remplazar cualquier shortcode con [la propia sintaxis de MDX](https://mdxjs.com/docs/what-is-mdx/#mdx-syntax), lo que permite expresiones JSX y/o importaciones de componentes.
+Para seguir utilizando contenido dinámico como variables, expresiones o componentes de la UI dentro del contenido de tu Markdown, añade la integración opcional MDX de Astro y convierte tus archivos Markdown existentes a [páginas MDX](/es/guides/markdown-content/). MDX soporta el frontmatter en YAML, para que puedas mantener las propiedades existentes de tu frontmatter. Pero, tienes que remplazar cualquier shortcode con [la propia sintaxis de MDX](https://mdxjs.com/docs/what-is-mdx/#mdx-syntax), lo que permite expresiones JSX y/o importaciones de componentes.
 
-Para convertir otros tipos de sitios, como un portafolio o sitio de documentation, mira más plantillas iniciales oficiales en [astro.new](https://astro.new). Encontrarás un enlace al repositorio de GitHub de cada proyecto, así como enlaces para abrir facilmente el proyecto en los entornos de desarrollo en línea StackBlitz, CodeSandbox y Gitpod con un solo clic.
+Para convertir otros tipos de sitios, como un portafolio o sitio de documentatión, mira más plantillas oficiales de inicio en [astro.new](https://astro.new). Encontrarás un enlace al repositorio de GitHub de cada proyecto, así como enlaces de un solo clic para abrir un proyecto de trabajo en los entornos de desarrollo en línea de StackBlitz, CodeSandbox y Gitpod.
 
 ## Recursos de la Comunidad
 
