--- a/src/content/docs/es/guides/migrate-to-astro/from-docusaurus.mdx
+++ b/src/content/docs/es/guides/migrate-to-astro/from-docusaurus.mdx
@@ -15,35 +15,35 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 Docusaurus y Astro comparten algunas similitudes que te ayudarán a migrar tu proyecto:
 
-- Both Astro and Docusaurus are modern, JavaScript-based (Jamstack) site builders intended for [content-focused websites](/en/concepts/why-astro/#content-focused), like documentation sites. 
+- Astro y Docusaurus son constructores de sitios web modernos basados en JavaScript (Jamstack), [centrados en el contenido](/es/concepts/why-astro/#content-focused), como sitios de documentación. 
 
-- Both Astro and Docusaurus support [MDX pages](/en/guides/markdown-content/). You should be able to use your existing `.mdx` files to Astro.
+- Astro y Docusaurus admiten [páginas MDX](/es/guides/markdown-content/). Deberías poder utilizar tus archivos `.mdx` existentes en Astro.
 
-- Both Astro and Docusaurus use [file-based routing](/en/core-concepts/routing/) to generate page routes automatically for any MDX file located in `src/pages`. Using Astro's file structure for your existing content and when adding new pages should feel familiar.
+- Astro y Docusaurus usan el [enrutamiento basado en archivos](/es/core-concepts/routing/) para generar rutas de de página automáticamente para cualquier archivo MDX ubicado en `src/pages`. El uso de la estructura de archivos de Astro para tu contenido existente y al agregar nuevas páginas debería ser familiar.
 
-- Astro has an [official integration for using React components](/en/guides/integrations-guide/react/). Note that in Astro, React files **must** have a `.jsx` or `.tsx` extension.
+- Astro tiene una [integración oficial para el uso de componentes de React](/es/guides/integrations-guide/react/). Ten en cuenta que en Astro, los archivos de React **deben** tener la extensión `.jsx` o `.tsx`.
 
-- Astro supports [installing NPM packages](/en/guides/imports/#npm-packages), including several for React. You may be able to keep some or all of your existing React components and dependencies.
+- Astro admite la [instalación de paquetes de NPM](/es/guides/imports/#npm-packages), incluyendo varios para React. Podrás conservar algunos o todos tus componentes y dependencias existentes de React.
 
-- [Astro's JSX-like syntax](/en/core-concepts/astro-components/#the-component-template) should feel familiar if you are used to writing React.
+- [La sintaxis similar a JSX de Astro](/es/core-concepts/astro-components/#the-component-template) debería resultarte familiar si estás acostumbrado a escribir en React.
 
 
 ## Principales diferencias entre Docusaurus y Astro
 
 Cuando reconstruyas tu sitio de Docusaurus a Astro, notarás algunas diferencias importantes:
 
-- [MPA vs SPA](/en/concepts/mpa-vs-spa/): Docusaurus is a React-based single-page application (SPA). Astro sites are multi-page apps built using [`.astro` components](/en/core-concepts/astro-components/), but can also support [React, Preact, Vue.js, Svelte, SolidJS, AlpineJS, Lit](/en/core-concepts/framework-components/) and raw HTML templating.
+- [MPA vs SPA](/es/concepts/mpa-vs-spa/): Docusaurus es una aplicación de una sola página (SPA) construida en React. Los sitios de Astro son aplicaciones de varias páginas construidas utilizando [componentes `.astro`](/es/core-concepts/astro-components/), pero también puede admitir [React, Preact, Vue.js, Svelte, SolidJS, AlpineJS, Lit](/es/core-concepts/framework-components/) y plantillas de HTML sin procesar.
 
-- Docusaurus was designed to build documentation websites and has some built-in, documentation-specific website features that you would have to build yourself in Astro. Instead, Astro offers some of these features through an [official docs theme](https://github.com/withastro/astro/tree/latest/examples/docs). This website was built using that template! You can also find more [community docs themes](https://astro.build/themes?search=&categories%5B%5D=docs) with built-in features in our Themes Showcase.
+- Docusaurus fue diseñado para construir sitios web de documentación y tiene algunas características integradas, específicas para sitios web de documentación que tendrás que construir por ti mismo en Astro. En cambio, Astro ofrece algunas de estas características a través de un [tema oficial](https://github.com/withastro/astro/tree/latest/examples/docs). ¡Este sitio web fue construido utilizando esa plantilla! También puedes encontrar más [temas de documentación de la comunidad](https://astro.build/themes?search=&categories%5B%5D=docs) con características integradas en nuestro mostrador de temas.
 
-- Docusaurus sites use MDX pages for content. Astro's docs theme uses Markdown (`.md`) files by default and does not require you to use MDX. You can optionally [install Astro's MDX integration](/en/guides/integrations-guide/mdx/) and use `.mdx` files in addition to standard Markdown files.
+- Los sitios de Docusaurus utilizan páginas MDX para el contenido. El tema de documentación de Astro utiliza archivos Markdown (`.md`) por defecto y no requiere que utilices MDX. Opcionalmente puedes [instalar la integración de MDX de Astro](/es/guides/integrations-guide/mdx/) y usar archivos `.mdx` además de los archivos de Markdown estándar.
 
 
 ## Migrar de Docusaurus a Astro
 
-To convert a Docusaurus documentation site to Astro, start with our official docs theme starter template, or explore more community docs themes in our [theme showcase](https://astro.build/themes?search=&categories%5B%5D=docs). 
+Para convertir un sitio de documentación de Docusaurus a Astro, empieza con nuestra plantilla oficial de inicio, o explora más temas de la comunidad en nuestro [mostrador de temas](https://astro.build/themes?search=&categories%5B%5D=docs). 
 
-Puedes pasar el argumento `--template` al comando `create astro`  para empezar un nuevo proyecto de Astro con una de nuestras plantillas oficiales. O, puedes [comenzar un nuevo proyecto desde cualquier repositorio de Astro existente en GitHub](/en/install/auto/#starter-templates).
+Puedes pasar el argumento `--template` al comando `create astro`  para empezar un nuevo proyecto de Astro con una de nuestras plantillas oficiales. O, puedes [comenzar un nuevo proyecto desde cualquier repositorio de Astro existente en GitHub](/es/install/auto/#starter-templates).
 
   <PackageManagerTabs>
     <Fragment slot="npm">
@@ -64,12 +64,12 @@ Puedes pasar el argumento `--template` al comando `create astro`  para empezar u
   </PackageManagerTabs>
 
 
-Add our MDX integration and bring your existing content files to [create MDX pages](/en/guides/markdown-content/). You can still take advantage of [file-based routing](/en/core-concepts/routing/) by copying these documents directly into `src/pages/` in Astro, the same folder you currently use. Create folders with names that correspond to your existing Docusaurus project, and you should be able to keep your existing URLs. 
+Add our MDX integration and bring your existing content files to [create MDX pages](/es/guides/markdown-content/). You can still take advantage of [file-based routing](/es/core-concepts/routing/) by copying these documents directly into `src/pages/` in Astro, the same folder you currently use. Create folders with names that correspond to your existing Docusaurus project, and you should be able to keep your existing URLs. 
 
-Docusaurus probably handled much of your site layout and metadata for you. You may wish to read about [building Astro Layouts as page wrappers for Markdown and MDX](/en/core-concepts/layouts/#markdownmdx-layouts) to see how to manage templating yourself in Astro, including your page `<head>`.
+Docusaurus probablemente maneje gran parte del diseño y los metadatos de tu sitio por ti. Es posible que desees leer acerca de cómo [construir diseños en Astro como envoltorios de página para Markdown y MDX](/es/core-concepts/layouts/#markdownmdx-layouts) to see how to manage templating yourself in Astro, including your page `<head>`.
 
-You can find Astro's docs starter, and other official templates, on [astro.new](https://astro.new). You'll find a link to each project's GitHub repository, as well as one-click links to open a working project in StackBlitz, CodeSandbox and Gitpod online development environments.
+You can find Astro's docs starter, y otras plantillas oficiales, en [astro.new](https://astro.new). Encontrarás un enlace al repositorio de GitHub de cada proyecto, así como enlaces de un solo clic para abrir un proyecto de trabajo en los entornos de desarrollo en línea de StackBlitz, CodeSandbox y Gitpod.
 
 ## Recursos de la comunidad
 
-- Add your own!
+- ¡Añade el tuyo propio!
