--- a/src/content/docs/zh-cn/guides/integrations-guide/node.mdx
+++ b/src/content/docs/zh-cn/guides/integrations-guide/node.mdx
@@ -173,7 +173,7 @@ export default defineConfig({
 
 如需更多帮助，请查看 [Discord](https://astro.build/chat) 上的 `#support` 频道。我们友好的支持小队成员随时为你提供帮助！
 
-你还可以查看 [Astro 集成文档](https://docs.astro.build/zh-cn/guides/integrations-guide/) 了解更多关于集成的信息。
+你还可以查看 [Astro 集成文档][astro-integration] 了解更多关于集成的信息。
 
 ## 贡献
 
