ci: update reference docs

--- a/src/content/docs/en/reference/configuration-reference.mdx
+++ b/src/content/docs/en/reference/configuration-reference.mdx
@@ -441,21 +441,22 @@ Set custom HTTP response headers to be sent in `astro dev` and `astro preview`.
 
 <p>
 
-**Type:** `'astro/assets/services/sharp' | 'astro/assets/services/squoosh' | string`<br />
-**Default:** `'astro/assets/services/squoosh'`<br />
+**Type:** `Object`<br />
+**Default:** `{entrypoint: 'astro/assets/services/squoosh', config?: {}}`<br />
 <Since v="2.1.0" />
 </p>
 
 Set which image service is used for Astro’s experimental assets support.
 
-The value should be a module specifier for the image service to use:
-either one of Astro’s two built-in services, or a third-party implementation.
+The value should be an object with an entrypoint for the image service to use and optionally, a config object to pass to the service.
+
+The service entrypoint can be either one of the included services, or a third-party package.
 
 ```js
 {
   image: {
     // Example: Enable the Sharp-based image service
-    service: 'astro/assets/services/sharp',
+    service: { entrypoint: 'astro/assets/services/sharp' },
   },
 }
 ```
