fix broken links

--- a/src/content/docs/es/guides/migrate-to-astro/from-docusaurus.mdx
+++ b/src/content/docs/es/guides/migrate-to-astro/from-docusaurus.mdx
@@ -15,7 +15,7 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 Docusaurus y Astro comparten algunas similitudes que te ayudarán a migrar tu proyecto:
 
-- Astro y Docusaurus son constructores de sitios web modernos basados en JavaScript (Jamstack), [centrados en el contenido](/es/concepts/why-astro/#content-focused), como sitios de documentación. 
+- Astro y Docusaurus son constructores de sitios web modernos basados en JavaScript (Jamstack), [centrados en el contenido](/es/concepts/why-astro/#enfocado-en-el-contenido), como sitios de documentación. 
 
 - Astro y Docusaurus admiten [páginas MDX](/es/guides/markdown-content/). Deberías poder utilizar tus archivos `.mdx` existentes en Astro.
 
@@ -23,9 +23,9 @@ Docusaurus y Astro comparten algunas similitudes que te ayudarán a migrar tu pr
 
 - Astro tiene una [integración oficial para el uso de componentes de React](/es/guides/integrations-guide/react/). Ten en cuenta que en Astro, los archivos de React **deben** tener la extensión `.jsx` o `.tsx`.
 
-- Astro admite la [instalación de paquetes de NPM](/es/guides/imports/#npm-packages), incluyendo varios para React. Podrás conservar algunos o todos tus componentes y dependencias existentes de React.
+- Astro admite la [instalación de paquetes de NPM](/es/guides/imports/#paquetes-npm), incluyendo varios para React. Podrás conservar algunos o todos tus componentes y dependencias existentes de React.
 
-- [La sintaxis similar a JSX de Astro](/es/core-concepts/astro-components/#the-component-template) debería resultarte familiar si estás acostumbrado a escribir en React.
+- [La sintaxis similar a JSX de Astro](/es/core-concepts/astro-components/#maquetado-del-componente) debería resultarte familiar si estás acostumbrado a escribir en React.
 
 
 ## Principales diferencias entre Docusaurus y Astro
@@ -43,7 +43,7 @@ Cuando reconstruyas tu sitio de Docusaurus a Astro, notarás algunas diferencias
 
 Para convertir un sitio de documentación de Docusaurus a Astro, empieza con nuestra plantilla oficial de inicio, o explora más temas de la comunidad en nuestro [mostrador de temas](https://astro.build/themes?search=&categories%5B%5D=docs). 
 
-Puedes pasar el argumento `--template` al comando `create astro`  para empezar un nuevo proyecto de Astro con una de nuestras plantillas oficiales. O, puedes [comenzar un nuevo proyecto desde cualquier repositorio de Astro existente en GitHub](/es/install/auto/#starter-templates).
+Puedes pasar el argumento `--template` al comando `create astro`  para empezar un nuevo proyecto de Astro con una de nuestras plantillas oficiales. O, puedes [comenzar un nuevo proyecto desde cualquier repositorio de Astro existente en GitHub](/es/install/auto/#plantillas-de-inicio).
 
   <PackageManagerTabs>
     <Fragment slot="npm">
@@ -66,7 +66,7 @@ Puedes pasar el argumento `--template` al comando `create astro`  para empezar u
 
 Add our MDX integration and bring your existing content files to [create MDX pages](/es/guides/markdown-content/). You can still take advantage of [file-based routing](/es/core-concepts/routing/) by copying these documents directly into `src/pages/` in Astro, the same folder you currently use. Create folders with names that correspond to your existing Docusaurus project, and you should be able to keep your existing URLs. 
 
-Docusaurus probablemente maneje gran parte del diseño y los metadatos de tu sitio por ti. Es posible que desees leer acerca de cómo [construir diseños en Astro como envoltorios de página para Markdown y MDX](/es/core-concepts/layouts/#markdownmdx-layouts) to see how to manage templating yourself in Astro, including your page `<head>`.
+Docusaurus probablemente maneje gran parte del diseño y los metadatos de tu sitio por ti. Es posible que desees leer acerca de cómo [construir diseños en Astro como envoltorios de página para Markdown y MDX](/es/core-concepts/layouts/#plantillas-de-markdownmdx) to see how to manage templating yourself in Astro, including your page `<head>`.
 
 You can find Astro's docs starter, y otras plantillas oficiales, en [astro.new](https://astro.new). Encontrarás un enlace al repositorio de GitHub de cada proyecto, así como enlaces de un solo clic para abrir un proyecto de trabajo en los entornos de desarrollo en línea de StackBlitz, CodeSandbox y Gitpod.
 
