translate last sections

--- a/src/content/docs/es/guides/migrate-to-astro/from-docusaurus.mdx
+++ b/src/content/docs/es/guides/migrate-to-astro/from-docusaurus.mdx
@@ -64,11 +64,11 @@ Puedes pasar el argumento `--template` al comando `create astro`  para empezar u
   </PackageManagerTabs>
 
 
-Add our MDX integration and bring your existing content files to [create MDX pages](/es/guides/markdown-content/). You can still take advantage of [file-based routing](/es/core-concepts/routing/) by copying these documents directly into `src/pages/` in Astro, the same folder you currently use. Create folders with names that correspond to your existing Docusaurus project, and you should be able to keep your existing URLs. 
+Añade nuestra integración de MDX y lleva tus archivos de contenido existentes para [crear páginas MDX](/es/guides/markdown-content/). Todavía puedes aprovechar el [enrutamiento basado en archivos](/es/core-concepts/routing/) copiando estos documentos directamente en `src/pages/` en Astro, la misma carpeta que usas actualmente. Crea carpetas con nombres que correspondan a tu proyecto existente de Docusaurus y deberías poder mantener tus URLs existentes.
 
-Docusaurus probablemente maneje gran parte del diseño y los metadatos de tu sitio por ti. Es posible que desees leer acerca de cómo [construir diseños en Astro como envoltorios de página para Markdown y MDX](/es/core-concepts/layouts/#plantillas-de-markdownmdx) to see how to manage templating yourself in Astro, including your page `<head>`.
+Docusaurus probablemente maneje gran parte del diseño y los metadatos de tu sitio por ti. Es posible que desees leer acerca de cómo [construir diseños en Astro como envoltorios de página para Markdown y MDX](/es/core-concepts/layouts/#plantillas-de-markdownmdx) para ver cómo administrar la plantilla por ti mismo en Astro, incluyendo la sección `<head>` de tu página.
 
-You can find Astro's docs starter, y otras plantillas oficiales, en [astro.new](https://astro.new). Encontrarás un enlace al repositorio de GitHub de cada proyecto, así como enlaces de un solo clic para abrir un proyecto de trabajo en los entornos de desarrollo en línea de StackBlitz, CodeSandbox y Gitpod.
+Puedes encontrar la plantilla inicial de documentación de Astro, y otras plantillas oficiales, en [astro.new](https://astro.new). Encontrarás un enlace al repositorio de GitHub de cada proyecto, así como enlaces de un solo clic para abrir un proyecto de trabajo en los entornos de desarrollo en línea de StackBlitz, CodeSandbox y Gitpod.
 
 ## Recursos de la comunidad
 
