--- a/src/content/docs/es/reference/errors/markdown-image-not-found.mdx
+++ b/src/content/docs/es/reference/errors/markdown-image-not-found.mdx
@@ -11,5 +11,5 @@ Astro no pudo encontrar una imagen que incluiste en tu contenido Markdown. Norma
 
 Las imágenes en Markdown son relativas al archivo actual. Para referirse a una imagen que se encuentra en la misma carpeta que el archivo `.md`, la ruta debe empezar por `./`.
 
-**Ver también::**
+**Ver también:**
 -  [Assets (Experimental)](/es/guides/assets/)
