--- a/src/content/docs/es/reference/errors/markdown-image-not-found.mdx
+++ b/src/content/docs/es/reference/errors/markdown-image-not-found.mdx
@@ -1,5 +1,5 @@
 ---
-title: Image not found.
+title: Imagen no encontrada.
 i18nReady: true
 githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/errors/errors-data.ts
 ---
