chore: applied suggestions

--- a/src/content/docs/es/guides/integrations-guide/solid-js.mdx
+++ b/src/content/docs/es/guides/integrations-guide/solid-js.mdx
@@ -1,7 +1,7 @@
 ---
 type: integration
 title: '@astrojs/solid-js'
-description: Learn how to use the @astrojs/solid-js framework integration to extend component support in your Astro project.
+description: Aprende como usar la integración de @astrojs/solid-js para extender el soporte de componentes en tu proyecto Astro.
 githubURL: 'https://github.com/withastro/astro/tree/main/packages/integrations/solid/'
 hasREADME: true
 category: renderer
@@ -16,16 +16,16 @@ Esta **[integración de Astro][astro-integration]** habilita el renderizado del 
 
 ## Instalación
 
-Hay dos formas de agregar integraciones a su proyecto. ¡Vamos a probar la opción más conveniente primero!
+Hay dos formas de agregar integraciones a tu proyecto. ¡Vamos a probar la opción más conveniente primero!
 
-### comando `astro add`
+### Comando `astro add`
 
 Astro incluye una herramienta CLI para agregar integraciones de primera parte: `astro add`. Este comando hará:
 
-1.  (Opcionalmente) Instala todas las dependencias y dependencias de pares necesarias
+1.  (Opcionalmente) Instala todas las dependencias necesarias y dependencias de pares 
 2.  (También opcional) Actualiza tu archivo `astro.config.*` para aplicar esta integración
 
-Para instalar `@astrojs/solid-js`, ejecuta lo siguiente desde el directorio de su proyecto y siga las instrucciones:
+Para instalar `@astrojs/solid-js`, ejecuta lo siguiente desde el directorio de tu proyecto y sigue las instrucciones:
 
 ```sh
 # Usando NPM
@@ -36,7 +36,7 @@ yarn astro add solid
 pnpm astro add solid
 ```
 
-Si tiene algún problema, [no dude en informarnos en GitHub](https://github.com/withastro/astro/issues) e intenta los pasos de instalación manual a continuación.
+Si tienes algún problema, [no dudes en informarnos en GitHub](https://github.com/withastro/astro/issues) e intenta los pasos de instalación manual a continuación.
 
 ### Instala dependencias manualmente
 
@@ -46,7 +46,7 @@ Primero, instala la integración `@astrojs/solid-js` de la siguiente manera:
 npm install @astrojs/solid-js
 ```
 
-La mayoría de los gestores de paquetes instalarán las dependencias asociadas como pares también. Sin embargo, si ve un aviso "No se puede encontrar el paquete 'solid-js'" (o similar) al iniciar Astro, deberá instalar SolidJS:
+La mayoría de los gestores de paquetes instalarán las dependencias asociadas como pares también. Sin embargo, si ves un mensaje de advertencia que dice "No se puede encontrar el paquete 'solid-js'" (o similar) cuando inicias Astro, tendrás que instalar SolidJS:
 
 ```sh
 npm install solid-js
